- Streaming interface to libaften / internal sample buffer
- Multiple-file commandline input with channel designation
- Better error logging for libaften

Aften Changelog
---------------
version SVN : current
- added C++ bindings (pass -DBINDINGS_CXX=1 to cmake to build them)
- API change of helper functions
- new bitalloc algorithm
- parallelization
- optional faster exponent strategy decision

version 0.06 : 31 January 2007
- added SSE/SSE3 mdct code (based on vorbis lancer by blacksword8192@hotmail.com)
- added runtime SIMD detection code (Prakash Punnoor)
- added CMake build system with shared lib/dll support
- optional faster bit allocation by reducing accuracy/quality
- replaced MDCT code with implementation from libvorbis
- added Dynamic Range Compression encoding w/ profile selection
- improved exponent strategy decision
- accuracy increase in bit allocation
- new longhelp option for detailed commandline info

version 0.05 : 21 August 2006
- bit allocation speedup by Prakash Punnoor <prakash@punnoor.de>
- compile-time choice of using floats or doubles internally
- internal restructuring of MDCT functions
- more bit allocation speed-ups and bug fixes
- quality=0 is now a valid setting

version 0.04 : 05 August 2006
- fixed VBR to lower quality if needed to fit in largest available frame size
- small adjustment to exponent strategy decision
- WAVE_FORMAT_EXTENSIBLE fix by Tebasuna
- Alternate bit stream syntax with new commandline options
- Better encoding structure
- filter library
- changed sample type from float to double
- moved CRC code to a separate file
- LFE low-pass filter
- DC high-pass filter
- bandwidth low-pass filter
- Improved variable bandwidth selection
- Channel bandwidth low-pass filter
- Created separate library and frontend
- changed default mode to CBR
- allow for specification of max bitrate in VBR mode

version 0.03 : 20 July 2006
- support for WAV with sample types 8-bit, 24-bit, 32-bit, float, or double.