@@ -151,6 +151,7 @@ typedef struct A52Context {
     AftenMetadata meta;
     void (*fmt_convert_from_src)(FLOAT dest[A52_MAX_CHANNELS][A52_SAMPLES_PER_FRAME],
           const void *vsrc, int nch, int n);
+    void (*apply_a52_window)(FLOAT *samples);
 
     int n_threads;
     int n_channels;
