@@ -26,6 +26,7 @@ version SVN : current
 - new bitalloc algorithm
 - parallelization
 - optional faster exponent strategy decision
+- added SSE version of window function
 
 version 0.06 : 31 January 2007
 - added SSE/SSE3 mdct code (based on vorbis lancer by blacksword8192@hotmail.com)
